--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -497,9 +497,13 @@ else ifeq ($(platform), miyoo)
 else ifeq ($(platform), emscripten)
    TARGET  := $(TARGET_NAME)_libretro_$(platform).bc
    fpic    := -fPIC
-   SHARED  := -shared -Wl,--no-undefined -Wl,--version-script=link.T
    CFLAGS += -DNO_DYLIB -DNO_SOCKET
+   CFLAGS += -msimd128 -ftree-vectorize
+   LIBPTHREAD :=
+   LIBDL :=
+   DYNAREC := 0
    STATIC_LINKING = 1
+   
 
 # Windows
 else
