Emscripten says the flag is -pthread not -lpthread

--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -544,6 +544,7 @@ else ifeq ($(platform), emscripten)
    CFLAGS += -msimd128 -ftree-vectorize
    ifeq ($(EMULATORJS_THREADS), 1)
       THREAD_RENDERING = 1
+      LIBPTHREAD := -pthread
    else
       LIBPTHREAD :=
    endif
