--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -557,6 +557,8 @@ else ifeq ($(platform), emscripten)
    endif
    LIBDL :=
    DYNAREC := 0
+   NO_MMAP = 1
+   NO_PTHREAD=1
    STATIC_LINKING = 1
    
 
